Fix invalid CSS transition value for .jx-scrollbar-handle
Summary:
The W3C CSS validator throws `0 is not a transition value : opacity 0 linear`.
`0` is not a valid value; likely `0s` were meant as in other existing CSS definitions.
See https://developer.mozilla.org/en-US/docs/Web/CSS/transition

Test Plan: Paste `standard-page-view.css` into https://jigsaw.w3.org/css-validator/ and read some CSS docs.

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Differential Revision: https://we.phorge.it/D25923

--- a/webroot/rsrc/css/application/base/standard-page-view.css
+++ b/webroot/rsrc/css/application/base/standard-page-view.css
@@ -183,10 +183,10 @@ a.handle-status-closed:hover {
 
 .jx-scrollbar-bar:hover .jx-scrollbar-handle {
   opacity: 0.7;
-  -webkit-transition: opacity 0 linear;
-  -moz-transition: opacity 0 linear;
-  -ms-transition: opacity 0 linear;
-  transition: opacity 0 linear;
+  -webkit-transition: opacity 0s linear;
+  -moz-transition: opacity 0s linear;
+  -ms-transition: opacity 0s linear;
+  transition: opacity 0s linear;
 }
 
 .jx-scrollbar-bar .jx-scrollbar-visible {
